src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <inlineHelpText>Values counted in months (e.g. quarterly equals 3 months)</inlineHelpText>
        <label>Invoicing Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly-1</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly-3</fullName>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>HalfYearly-6</fullName>
                    <label>Half Yearly</label>
                </value>
                <value>
                    <fullName>Annually-12</fullName>
                    <label>Annually</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Method_value__c</fullName>
        <formula>CASE(Billing_Method__c ,
&quot;Monthly-1&quot;, 1,
&quot;Quarterly-3&quot;, 3,
&quot;HalfYearly-6&quot;, 6,
&quot;Annually-12&quot;, 12
,0)</formula>
        <label>Billing Method (value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Revenue_Projections__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this field to true creates Billing Plans automatically and qualifies the Opportunity for Revenue Projections.</description>
        <inlineHelpText>Setting this field to true creates Billing Plans automatically and qualifies the Opportunity for Revenue Projections.</inlineHelpText>
        <label>Create Revenue Projections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Deal_Duration_months__c</fullName>
        <inlineHelpText>Choose the number of months that you expect the potential Contract to be valid for. 
If you expect an &apos;Evergreen&apos; Contract, select &apos;Evergreen&apos;. 
You may estimate in the beginning of the process, but an accurate duration must be entered by stage &apos;won&apos;.</inlineHelpText>
        <label>Contract Duration (months)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_full_Contract_implementation__c</fullName>
        <defaultValue>12</defaultValue>
        <inlineHelpText>Please enter the data in terms of months.</inlineHelpText>
        <label>Time to full Contract implementation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_revenue_days__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Please enter the expected number of days between the Opportunity Close Date and when the revenue starts.</inlineHelpText>
        <label>Time to first invoice (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>rp_PDDChangeNotAllowed</fullName>
        <active>true</active>
        <description>This field cannot be changed when the Stage is other than &quot;Preparing Proposal&quot;.</description>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL(StageName, &quot;Preparing Proposal&quot;)), 
ISCHANGED(Potential_Deal_Duration_months__c), 
RecordType.DeveloperName = &quot;Deal&quot; 
)</errorConditionFormula>
        <errorDisplayField>Potential_Deal_Duration_months__c</errorDisplayField>
        <errorMessage>This field cannot be changed when the Stage is other than &quot;Preparing Proposal&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rp_TTFCIChangeNotAllowed</fullName>
        <active>true</active>
        <description>This field cannot be changed when the Stage is other than &quot;Preparing Proposal&quot;.</description>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL(StageName, &quot;Preparing Proposal&quot;)), 
ISCHANGED(Time_to_full_Contract_implementation__c), 
RecordType.DeveloperName = &quot;Deal&quot; 
)</errorConditionFormula>
        <errorDisplayField>Time_to_full_Contract_implementation__c</errorDisplayField>
        <errorMessage>This field cannot be changed when the Stage is other than &quot;Preparing Proposal&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rp_billingMethodCRPRule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Create_Revenue_Projections__c == true,
ISBLANK(TEXT(Billing_Method__c)),
RecordType.DeveloperName =  &quot;Deal&quot;
)</errorConditionFormula>
        <errorDisplayField>Billing_Method__c</errorDisplayField>
        <errorMessage>You must select an Invoicing Interval when &quot;Create Revenue Projections&quot; is set to true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rp_billingMethodChangeNotAllowed</fullName>
        <active>true</active>
        <description>This field cannot be changed when the Stage is other than &quot;Preparing Proposal&quot;.</description>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL(StageName, &quot;Preparing Proposal&quot;)), 
ISCHANGED(Billing_Method__c), 
RecordType.DeveloperName = &quot;Deal&quot; 
)</errorConditionFormula>
        <errorDisplayField>Billing_Method__c</errorDisplayField>
        <errorMessage>This field cannot be changed when the Stage is other than &quot;Preparing Proposal&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rp_billingMethodPDDMMandatory</fullName>
        <active>true</active>
        <description>You must enter a value when &quot;Create Revenue Projections&quot; is set to true.</description>
        <errorConditionFormula>AND( 
Create_Revenue_Projections__c == true, 
ISBLANK(TEXT(Potential_Deal_Duration_months__c)), 
RecordType.DeveloperName =  &quot;Deal&quot;
)</errorConditionFormula>
        <errorDisplayField>Potential_Deal_Duration_months__c</errorDisplayField>
        <errorMessage>You must enter a value when &quot;Create Revenue Projections&quot; is set to true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rp_billingMethodTTFCIMandatory</fullName>
        <active>true</active>
        <description>You must enter a value when &quot;Create Revenue Projections&quot; is set to true.</description>
        <errorConditionFormula>AND( 
Create_Revenue_Projections__c == true, 
ISBLANK(Time_to_full_Contract_implementation__c),
RecordType.DeveloperName = &quot;Deal&quot;  
)</errorConditionFormula>
        <errorDisplayField>Time_to_full_Contract_implementation__c</errorDisplayField>
        <errorMessage>You must enter a value when &quot;Create Revenue Projections&quot; is set to true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rp_billingMethodTTFCIRule</fullName>
        <active>true</active>
        <description>Value in &quot;Time to full contract implementation&quot; must be exactly divisible by &quot;Billing Method&quot;.</description>
        <errorConditionFormula>IF(Billing_Method_value__c &gt; 0, 
AND(
Create_Revenue_Projections__c == true,
MOD(Time_to_full_Contract_implementation__c, Billing_Method_value__c) &gt; 0,
RecordType.DeveloperName = &quot;Deal&quot; 
),
false)</errorConditionFormula>
        <errorMessage>Value in &quot;Time to full contract implementation&quot; must be exactly divisible by &quot;Invoicing Interval&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rp_billingMethodTTRDMandatory</fullName>
        <active>true</active>
        <description>You must enter a value when &quot;Create Revenue Projections&quot; is set to true.</description>
        <errorConditionFormula>AND( 
Create_Revenue_Projections__c == true, 
ISBLANK(Time_to_revenue_days__c),
OR( 
RecordType.DeveloperName = &quot;Deal&quot;, 
RecordType.DeveloperName = &quot;Spot&quot; 
)  
)</errorConditionFormula>
        <errorDisplayField>Time_to_revenue_days__c</errorDisplayField>
        <errorMessage>You must enter a value when &quot;Create Revenue Projections&quot; is set to true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rp_createProjectionChangeStageNameRule</fullName>
        <active>true</active>
        <description>This field cannot be changed when the Stage is other than &quot;Preparing Proposal&quot;.</description>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL(StageName, &quot;Preparing Proposal&quot;)), 
ISCHANGED(Create_Revenue_Projections__c), 
OR( 
RecordType.DeveloperName = &quot;Deal&quot;, 
RecordType.DeveloperName = &quot;Spot&quot; 
) 
)</errorConditionFormula>
        <errorDisplayField>Create_Revenue_Projections__c</errorDisplayField>
        <errorMessage>This field cannot be changed when the Stage is other than &quot;Preparing Proposal&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rp_createProjectionOnOppCreate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL(StageName, &quot;Preparing Proposal&quot;)), 
Create_Revenue_Projections__c == true,
ISNEW(), 
OR( 
RecordType.DeveloperName = &quot;Deal&quot;, 
RecordType.DeveloperName = &quot;Spot&quot; 
) 
)</errorConditionFormula>
        <errorDisplayField>Create_Revenue_Projections__c</errorDisplayField>
        <errorMessage>This field cannot be set to true when the Stage is other than &quot;Preparing Proposal&quot;.</errorMessage>
    </validationRules>
</CustomObject>